--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -232,6 +232,9 @@
             i = "#"+$(this).prop('id');
             t = $(this).text();
             c = $('<a href="'+i+'" rel="nofollow">'+t+'</a>');
+            if (n == 'h2') {
+                c = $('<a href="'+i+'" rel="nofollow">'+&nbspt+'</a>');
+            }
             l = $('<li class="'+n+'_nav"></li>').append(c);
             $(selector).append(l);
         });
