--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -232,8 +232,8 @@
             i = "#"+$(this).prop('id');
             t = $(this).text();
             c = $('<a href="'+i+'" rel="nofollow">'+t+'</a>');
-            if ('+n+' == 'h2') {
-                c = $('<a href="'+i+'" rel="nofollow">'&nbsp'+'+t+'</a>');
+            if (n == 'h2') {
+                c = $('<a href="'+i+'" rel="nofollow">'+t+'</a>');
             }
             l = $('<li class="'+n+'_nav"></li>').append(c);
             $(selector).append(l);
